add README.md and .gitignore chats: 1. #README.md 帮我写这个项目的运行和使用文档 2. 浏览器访问首页显示404，提供解决方案 3. TemplateDoesNotExist at / 如何解决 4. #.gitignore 屏蔽无需git跟踪的文件及文件夹

--- a/expense_calculator/templates/index.html
+++ b/expense_calculator/templates/index.html
@@ -83,7 +83,7 @@
     
     // Example usage
     // deleteExpense(1);
-    // getExpenses();
+    getExpenses();
     // postExpense();
   </script>
 </body>
